force-app/main/default/objects/Stakeholder__c/Stakeholder__c.object-meta.xml
<CustomObject>
    <label>Stakeholder</label>
    <nameField>
        <label>Stakeholder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>