force-app/main/default/objects/Stakeholder__c/fields/Parent_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Parent_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Stakeholder</label>
    <referenceTo>Stakeholder__c</referenceTo>
    <relationshipLabel>Stakeholder</relationshipLabel>
    <relationshipName>Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>