force-app/main/default/objects/Stakeholder__c/fields/Stakeholder_Type__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stakeholder Type</label>
    <referenceTo>Stakeholder_Type__c</referenceTo>
    <relationshipLabel>Stakeholders</relationshipLabel>
    <relationshipName>Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>